# ccw

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  ask.rs  checker.rs  commit_review.rs  commit_summary.rs  config.rs  convert_to_rust.rs  criteria_verify.rs  design_advice.rs  explain.rs  file.rs  main.rs  ollama.rs  performance.rs  task_comment.rs  task_criteria_check.rs  task_description.rs  task_generate.rs  task_review.rs
