[package]
name = "ccw"
version = "0.0.1"
edition = "2024"

[dependencies]
async-recursion = "1.1.1"
chrono = { version = "0.4.42", default-features = false, features = [
    "now",
    "serde"
] }
clap = { version = "4.5.54", default-features = false, features = [
    "derive",
    "env",
    "help",
    "std"
] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "json"
] }
serde = { version = "1.0.228", default-features = false, features = [
    "derive"
] }
serde_json = "1.0.149"
tokio = { version = "1.48", default-features = false, features = [
    "full"
] }
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
